--- a/CP(Cine Plus)/package.json
+++ b/CP(Cine Plus)/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.8.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3"
   },
